app/buck2_error_tests/src/golden/test_recover_starlark_span_through_context.golden
# @generated
# To regenerate, append -- --env BUCK2_RUST_REGENERATE_GOLDEN_TESTS=1 and re-run the test

wrapper

Caused by:
    error: test_recover_starlark_span
     --> test.bzl:2:5
      |
    2 | def and(): pass
      |     ^^^
      |
